Test that when on search, if body is empty return a bad request; search method on controller added;
