# backend/server/api/controllers/todo/router.js
@@ -2,6 +2,7 @@ import * as express from "express";
 import controller from "./controller";
 
 export default express
-  .Router()
-  .post("/", controller.create)
-  .post("/stub", controller.stub);
+    .Router()
+    .post("/", controller.create)
+    .post("/stub", controller.stub)
+    .post("/search", controller.search)
